lang/macro/tests/ui/fail/19-too-many-outputs.stderr
error: the number of output arguments should not be more than 16
  --> $DIR/19-too-many-outputs.rs:16:11
   |
16 |           ) -> (
   |  ___________^
17 | |             u8,
18 | |             u8,
19 | |             u8,
...  |
33 | |             u8,
34 | |         ) {
   | |_________^
